--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="nav-items">
                 <p class="border"><a href="https://maulinagargoje07.github.io/html-amazon/">Work</a></p>
                 <p class="border"><a href="https://drive.google.com/drive/folders/1ztX21X2-cONOIPb0J9VG5gEV3gIoMUup?usp=share_link">Certificates</a></p>
-                <p class="border"><a href="https://drive.google.com/file/d/1weFfQoPLpyzcZiAMgKl_Fmok1hjlDiet/view?usp=sharing">Resume</a></p>
+                <p class="border"><a href="https://drive.google.com/file/d/1X3GWYba-uCdnS9rM6l7JO7iNyW0rRLBn/view?usp=share_link">Resume</a></p>
                 <p class="border"><a href="nagargojemauli10@gmail.com">Email</a></p>
-                <p class="border"><a href="https://maulinagargoje07.github.io/html-portfolio/">About</a></p>
+                <p class="border"><a href="https://maulinagargoje07.github.io/myportfolio/">About</a></p>
             </div>
         </div>
         <div class="content">
